fix html and modal z-index

--- a/public/css/event.css
+++ b/public/css/event.css
@@ -145,3 +145,7 @@
   cursor: not-allowed;
 
 }
+
+#host-modal {
+  z-index: 99;
+}
